crates/math-core/tests/snapshots/error_test__operatorname_with_end_after_begin.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{matrix}\\operatorname{\\end{matrix}}"
---
Error: Expected argument but got closing token (`}`, `\end`, `\right`).
   ╭─[ <input>:1:29 ]
   │
 1 │ \begin{matrix}\operatorname{\end{matrix}}
   │                             ──────┬─────  
   │                                   ╰─────── expected an argument here
───╯
